--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "url": "https://github.com/BenjaminHae/ioBroker.artnet2"
   },
   "dependencies": {
-    "@iobroker/adapter-core": "^2.2.1"
+    "@iobroker/adapter-core": "^2.2.1",
+    "artnet": "^1.4.0"
   },
   "devDependencies": {
     "@iobroker/testing": "^2.1.0",
