fix some compiler errors

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,7 +32,8 @@
 
         "sourceMap": false,
         "inlineSourceMap": false,
-        "watch": false
+        "watch": false,
+	"noImplicitAny": false
     },
     "include": [
         "**/*.ts"
